--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9896,13 +9896,34 @@ h3 {
     border-color: #dee2e6;
   }
 }
+/* customization for bootstrap card */
+.progress__container {
+  height: 100%;
+  flex: 1;
+}
+
+.progress__body {
+  height: 100%;
+}
+.progress__body--contents {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+}
+.progress__body--title {
+  color: #fff;
+  padding: 0.8rem;
+}
+
 .main-page__navbar {
   width: 100%;
   top: 0;
+  z-index: 100;
 }
 
 .main-page__container {
   margin-top: 5rem;
+  min-height: 85vh;
 }
 
 /*# sourceMappingURL=app.css.map */
