--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,11 +1,18 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "progress";
 
 // custom
 .main-page__navbar {
   width: 100%;
   top: 0;
+  z-index: 100;
 }
 
 .main-page__container {
   margin-top: 5rem;
+  min-height: 85vh;
 }
+
+
+
+
