--- a/assets/styles/_progress.scss
+++ b/assets/styles/_progress.scss
@@ -1,18 +1,64 @@
 /* customization for bootstrap card */
-.progress__container {
-  height: 100%;
-  flex: 1;
-}
-
-.progress__body {
-  height: 100%;
-  &--contents {
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
+.progress {
+  &__container {
+    height: 100%;
+    flex: 1;
   }
-  &--title {
+
+  &__body {
+    height: 100%;
+
+    &--title {
+      display: flex;
+      justify-content: space-between;
+      color: #fff;
+      padding: 0.8rem;
+
+      & > svg:hover {
+        cursor: pointer;
+      }
+    }
+
+    &--contents {
+      padding-left: 0;
+      padding-right: 0;
+      padding-top: 0;
+      background-color: $gray-300;
+      height: 100%;
+    }
+  }
+  &__card {
+    border: 1px solid $gray-300;
+    border-radius: .5rem;
+    width: 100%;
+    min-height: 7rem;
+    margin-top: .5rem;
+    text-align: center;
     color: #fff;
-    padding: 0.8rem;
+
+     > hr {
+       width: 80%;
+     }
+    &--name {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: .5rem .5rem 0 .5rem;
+    }
+    &--text{
+      font-size: 1.3rem;
+    }
+    &--icons {
+      padding-top: .3rem;
+
+      & > svg {
+        margin-left: .2rem;
+        cursor: pointer;
+      }
+    }
+    &--description {
+      width: 100%;
+    }
   }
 }
