--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9901,18 +9901,56 @@ h3 {
   height: 100%;
   flex: 1;
 }
-
 .progress__body {
   height: 100%;
+}
+.progress__body--title {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  padding: 0.8rem;
+}
+.progress__body--title > svg:hover {
+  cursor: pointer;
 }
 .progress__body--contents {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
+  background-color: #dee2e6;
+  height: 100%;
 }
-.progress__body--title {
+.progress__card {
+  border: 1px solid #dee2e6;
+  border-radius: 0.5rem;
+  width: 100%;
+  min-height: 7rem;
+  margin-top: 0.5rem;
+  text-align: center;
   color: #fff;
-  padding: 0.8rem;
+}
+.progress__card > hr {
+  width: 80%;
+}
+.progress__card--name {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0.5rem 0.5rem 0 0.5rem;
+}
+.progress__card--text {
+  font-size: 1.3rem;
+}
+.progress__card--icons {
+  padding-top: 0.3rem;
+}
+.progress__card--icons > svg {
+  margin-left: 0.2rem;
+  cursor: pointer;
+}
+.progress__card--description {
+  width: 100%;
 }
 
 .main-page__navbar {
