--- a/templates/kanban_board/index.html.twig
+++ b/templates/kanban_board/index.html.twig
@@ -17,11 +17,13 @@
                     {% for progress in progresses %}
                         <div class="col-3">
                             <div class="progress__body">
-                                <div class="progress__body--contents">
-                                    <div class="progress__body--title" style="background-color: {{ progress.color }}">
-                                        <h4>{{ progress.description }}</h4>
-                                        <i class="fas fa-plus fa-2x"></i>
-                                    </div>
+                                <div class="progress__body--title" style="background-color: {{ progress.color }}">
+                                    <h4>{{ progress.description }}</h4>
+                                    <i class="fas fa-plus fa-2x"></i>
+                                </div>
+                                <div class="progress__body--contents connected-sortable">
+
+                                    <div class="progress__cards">
                                     <div class="progress__card" style="background-color:  {{ progress.color }}">
                                         <div class="progress__card--name">
                                             <div class="progress__card--text">
@@ -36,6 +38,7 @@
                                         <div class="progress__card--description">
                                             TestTestTestTestTestTestTestTest
                                         </div>
+                                    </div>
                                     </div>
                                 </div>
 
