Added the ability to remove a card

--- a/assets/styles/_progress.scss
+++ b/assets/styles/_progress.scss
@@ -60,5 +60,11 @@
     &--description {
       width: 100%;
     }
+    &--input-text {
+      width: 80%;
+    }
+    &--textarea-text {
+      margin: .5rem;
+    }
   }
 }
