Handle stop ediding button (times circle)

--- a/templates/kanban_board/index.html.twig
+++ b/templates/kanban_board/index.html.twig
@@ -36,7 +36,7 @@
                                         </div>
                                         <hr />
                                         <div class="progress__card--description">
-                                            TestTestTestTestTestTestTestTest
+                                            <p>TestTestTestTestTestTestTestTest</p>
                                         </div>
 
                                     </div>
