--- a/templates/kanban_board/index.html.twig
+++ b/templates/kanban_board/index.html.twig
@@ -7,6 +7,11 @@
     <main>
         <nav class="navbar navbar-light bg-primary position-fixed main-page__navbar">
             <span class="navbar-brand mb-0 h1 text-white ">KanBoard App</span>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="{{ path('app_logout') }}">Logout</a>
+                </li>
+            </ul>
         </nav>
         <div class="container d-flex flex-column main-page__container">
             {% for workspace in workspaces %}
