Created jwt in kanboardcontroller and set to httponly cookie to be used in ajax reauest in order to persist data in kanban cards

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -51,7 +51,10 @@
         </div>
     </div>
 
-
+{% block javascripts%}
+    {{ parent() }}
+    {{ asset('build/js/login') }}
+{% endblock %}
 
 
 {% endblock %}
