--- a/templates/kanban_board/index.html.twig
+++ b/templates/kanban_board/index.html.twig
@@ -15,13 +15,14 @@
         </nav>
         <div class="container d-flex flex-column main-page__container">
             {% for workspace in workspaces %}
+{#                TODO: CHANGE DATA-ID#}
                 <div class="jumbotron">
-                    <h1 class="display-4">{{ workspace.name }}</h1>
+                    <h1 class="workspace__title display-4" data-id="{{ workspace.id }}">{{ workspace.name }}</h1>
                 </div>
                 <div class="row progress__container">
                     {% for progress in progresses %}
                         <div class="col-3">
-                            <div class="progress__body">
+                            <div class="progress__body" data-id="{{ progress.id }}">
                                 <div class="progress__body--title" style="background-color: {{ progress.color }}">
                                     <h4>{{ progress.description }}</h4>
                                     <i class="fas fa-plus fa-2x"></i>
