Made the rearrange of cards be saved to the db

--- a/templates/kanban_board/index.html.twig
+++ b/templates/kanban_board/index.html.twig
@@ -28,7 +28,7 @@
                                     <i class="fas fa-plus fa-2x"></i>
                                 </div>
                                 <div class="progress__body--contents connected-sortable">
-                                    {% for task in progress.tasks|sort %}
+                                    {% for task in progress.tasks|sort((a, b) => a.priority <=> b.priority) %}
                                         <div class="progress__card" data-id="{{ task.id }}" style="background-color: {{ task.color }}">
                                             <div class="progress__card--name">
                                                 <div class="progress__card--text">
