--- a/templates/kanban_board/index.html.twig
+++ b/templates/kanban_board/index.html.twig
@@ -7,18 +7,50 @@
     <main>
         <nav class="navbar navbar-light bg-primary position-fixed main-page__navbar">
             <span class="navbar-brand mb-0 h1 text-white ">KanBoard App</span>
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item ml-5 form-inline my-2 my-lg-0">
+
+                        <a class="nav-link text-light ml-1" href="{{ path('app_create_workspace') }}">
+                            <i class="fas fa-plus"></i>
+                            Create a New Workspace
+                        </a>
+                    </li>
+
+                </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-light" href="{{ path('app_logout') }}">Logout</a>
                 </li>
             </ul>
+
         </nav>
         <div class="container d-flex flex-column main-page__container">
 
             {# TODO: CHANGE DATA-ID #}
+        <div class="d-flex justify-content-between">
             <div class="jumbotron">
                 <h1 class="workspace__title display-4" data-id="{{ workspace.id }}">{{ workspace.name }}</h1>
+                <p class="lead">{{ workspace.description }}</p>
             </div>
+            <form action="{{ path("homepage") }}" method="post">
+                <div class="form-row align-items-center">
+                    <div class="col">
+                        <label class="mb-0" for="exampleFormControlSelect1">Select A different workspace</label>
+                        <select class="form-control mt-3" id="exampleFormControlSelect1" name="workspace_select">
+                            {% for workspaceOption in workspaces %}
+                            <option value="{{ workspaceOption.id }}">{{ workspaceOption.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col-3">
+                        <button class="btn btn-sm btn-primary mt-5" type="submit">
+                            Change
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
 
             <div class="row progress__container">
                 {% for progress in progresses %}
