--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,7 +13,7 @@
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-    <div class="container d-flex flex-column justify-content-center align-content-center">
+    <div class="container d-flex flex-column justify-content-center align-items-center">
         <div class="card">
             <div class="card-body">
                 <div class="card-title">
@@ -21,40 +21,49 @@
                 </div>
                 <div class="card-body">
                     <form method="post">
-                        <label for="inputEmail">Email</label>
-                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
-                               required autofocus>
-                        <label for="inputPassword">Password</label>
-                        <input type="password" name="password" id="inputPassword" class="form-control" required>
+                        <div class="form-group">
+                            <label for="inputEmail">Email</label>
+                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail"
+                                   class="form-control"
+                                   required autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword">Password</label>
+                            <input type="password" name="password" id="inputPassword" class="form-control" required>
 
+                        </div>
                         <input type="hidden" name="_csrf_token"
                                value="{{ csrf_token('authenticate') }}"
                         >
-
-                        {#
-                            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                            See https://symfony.com/doc/current/security/remember_me.html
-
-                            <div class="checkbox mb-3">
-                                <label>
-                                    <input type="checkbox" name="_remember_me"> Remember me
-                                </label>
+                        <div class="form-row">
+                            <div class="col">
+                                <div class="checkbox mb-3">
+                                    <label>
+                                        <input type="checkbox" name="_remember_me"> Remember me
+                                    </label>
+                                </div>
                             </div>
-                        #}
-
-                        <button class="btn btn-lg btn-primary mt-1" type="submit">
+                            <div class="col text-right">
+                                <a href="#">Forgot Password?</a>
+                            </div>
+                        </div>
+                        <button class="btn btn-lg btn-primary mt-1 w-100" type="submit">
                             Sign in
                         </button>
+
                     </form>
+                    <div class="mt-4  text-center">
+                        <p class="mb-0">Need an account? <a href="{{ path("app_register") }}">Sign Up</a></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-{% block javascripts%}
-    {{ parent() }}
-    {{ asset('build/js/login') }}
-{% endblock %}
+    {% block javascripts %}
+        {{ parent() }}
+        {{ asset('build/js/login') }}
+    {% endblock %}
 
 
 {% endblock %}
