--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('build/app~css/app.css') }}">
+        {{ encore_entry_link_tags('css/app') }}
+{#        <link rel="stylesheet" href="{{ asset('build/app~css/app.css') }}">#}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
               integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
               crossorigin="anonymous"/>
