Added settings dropdown menu in navbar - made navbar collapsible

--- a/assets/styles/_progress.scss
+++ b/assets/styles/_progress.scss
@@ -1,8 +1,9 @@
 /* customization for bootstrap card */
 .progress {
   &__container {
-    height: 100%;
-    flex: 1;
+    //height: 100%;
+    //flex: 1;
+    flex-grow: 1;
   }
 
   &__body {
